[metadata]
name = pymqttbench
summary = A script to benchmark an MQTT broker
description-file =
    README.rst
author = Matthew Treinish
author-email = mtreinish@kortar.org
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    pymqttbench

[entry_points]
console_scripts =
    pymqttbench = pymqttbench.bench:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
